# Stock_list

./: .env.example  .gitignore  README.md  monitor.py  pyproject.toml
src/: Reference.py  __init__.py  auth.py  client.py  config.py  main.py  swing_signal.py
